prevent horizontal overflow of text & images on mobile portrait

--- a/src/index.less
+++ b/src/index.less
@@ -36,6 +36,8 @@ body {
 
     box-shadow: 0 0 24px black, inset 0 0 50px @parchment-dark;
 
+    overflow-x: hidden;
+
     #header {
         text-align: center;
 
@@ -168,8 +170,12 @@ body {
         }
 
         .social {
-            transform: scale(1.5);
+            transform: scale(1.3);
             transform-origin: 50% 0;
+        }
+
+        > img {
+            width: 60%;
         }
     }
 
